Fix z-index of left-side svgs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -973,6 +973,7 @@ span.main-userWidget-displayName,
 }
 
 .main-rootlist-wrapper > div:nth-child(2) > li img,
+.main-navBar-navBarLink > svg,
 .main-navBar-navBarLink > .icon {
     z-index: 1;
 }
